--- a/css/03 modelo-caja/ejer2-caja2.css
+++ b/css/03 modelo-caja/ejer2-caja2.css
@@ -1,19 +1,34 @@
-main {
-    text-align: center;
-}
-header {
-    background-color: brown;
-    padding-inline: 100px;
-    padding-bottom: 290px;
+.uno{
+    background: brown;
     color: white;
-    
-}
+    padding: 0px 30px 300px;
+    text-align: center;
 
-.img {
-    background-color: orangered;
 }
+.dos{
+    background: gray;
+    border: 3px solid white;
+    display: inline-block;
+    width: 120px;
+    margin: 0px calc(50% - 60px);
+    padding: 0px 0px 20px 0px;
+}
+section{
+    background: orangered;
+}
+.tres{
+    background:yellow;
+    text-align: center;
+    padding: 1px 15px 110px;
+}
+.cuatro{
+    background: blue;
+    color: white;
+    text-align: center;
+    padding: 5px 20px 25px;
 
-img {
-    height: 150px;
-    width: 150px;
+}
+#negro{
+    color: black;
+    margin: 0px;
 }
