--- a/css/grid/review16-2.css
+++ b/css/grid/review16-2.css
@@ -1,54 +1,63 @@
-*{
-    box-sizing: border-box;
-}
-.container{
+.container {
+    padding: 5px;
+    margin: 0 auto;
     display: grid;
-    grid-template-columns:  25% 25% 25% 25%;
-    grid-template-rows: 25% 25% 25%;
-    gap: 10px;
-    height: 600px;
-    width: 600px;
-    margin: 0 20%;
-    
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 50%;
+    height: 80vh;
+    gap: 5px;
+}
+p {
+    width: 300px;
+}
+img {
+    width: 100px;
+}
+.grid {
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.item2, .item3, .item4, .item5, .item6, .item7, .item8, .item9 {
+    border-radius: 50%;
+    overflow: hidden;
 }
 .item1{
-    background-color:rgb(34, 26, 26);
-    border-radius: 12px;
-    color: white;
-    grid-column: 1 / 3;
-    grid-row: 1 / 3;
-    padding-left: 20px;
-    padding-right: 20px;
+    background-color: rgb(22, 31, 53);
+    grid-area: 1 / 1 / 3 / 3;
+    color: gray;
+    border-radius: 20px;
 }
-.item2{
-    background-color: darkorange;
-    border-radius: 50%;
+.grid1 {
+    font-size: xx-large;
+    font-weight: 500;
+    font-family: sans-serif;
+    margin: 30px 30px 0 ;
 }
-.item3{
-    background-color: gray;
-    border-radius: 50%;
+
+
+.item2 {
+    background-color: orange;
+    grid-area: 1 / 3 / 2 / 4;
 }
-.item4{
-    background-color: rgb(34, 26, 26);
-    border-radius: 50%;
+.item3 {
+    background-color: skyblue;
+    grid-area: 1 / 4 / 2 / 5;
 }
-.item5{
-    background-color: gray;
-    border-radius: 50%;
+.item4 {
+    background: rgb(23, 32, 56);
+    grid-area: 2 / 3 / 3 / 4;
 }
-.item6{
-    background-color: darkorange;
-    border-radius: 50%;
+.item5 {
+    background: skyblue;
 }
-.item7{
-    background-color: rgb(34, 26, 26);
-    border-radius: 50%;
+.item6 {
+    background-color: orange;
 }
-.item8{
-    background-color: gray;
-    border-radius: 50%;
+.item7, .item9 {
+    background-color: rgb(23, 32, 56);
 }
-.item9{
-    background-color: rgb(34, 26, 26);
-    border-radius: 50%;
+.item8 {
+    background-color: skyblue;
 }
